<resources>
    <string name="app_name">RIZVI</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="long_text">Press the download button to see the complete document.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ncc_1string">N.C.C cadets of Rizvi College have regularlyand successfully participated in Physically and mentally highly demanding national level camps (competitions) like TSC (ThalSena Camp), RDC (Republic Day Camp) etc. Though this in itself an achievement, someendured to achieved greater goals.</string>
    <string name="ncc_2string">Sushant Sail, a second year cadet of Rizvi college was the sole cadet from Mumbai selected to Maharashtra Kabbaddi team in N.C.C National Games, Delhi in August 2015. The Maharashtra team won silver medal in the competition.</string>
    <string name="Ncc_title_string">Individual Achievements of N.C.C Cadets (June 2015 - August 2016)</string>
    <string name="ncc_3string">TusharTavandkar, a third year cadet and S.Y.B.COM student of Rizvi College, competed with the cadets of 01.Maharashtra.Battalion and won gold medal in obstacle race at ThalSena Camp (TSC), Nashik in July 2016. He was selected through thetraining and elimination rounds of the first three camps of the series of back to back camps (each of 12 days duration) that leads to prestigious national level competition in Delhi in the September, 2016.</string>
    <string name="ncc_4string">Khan Kaif, a second year cadet and S.Y.J.C. science student of Rizvi College, at the time of writing this article, has already made it through the training and elimination rounds of the first five camps and is currently being trained in the sixth camp of the series of camps that cumulates to competing in the prestigious national level competition in Delhi in September, 2016.</string>
    <string name="ncc_string5">Care-taker office of N.C.C Unit, Rizvi College, would like to thank respected Principal, Dr. M. Z. Farooqui and Vice-Principal,Dr.AnjumAra for supporting and encouraging N.C.C, Ex. A.N.O Ashok Singh for guidance post retirement from N.C.C.\n\nAll the efforts, support, encouragement and guidance put in by the college will eventually be of no significance without the spirited, diligent and persistent efforts put in by the cadets of our N.C.C. unit. They rightfully deserve the greatest appreciation.\n\nThank You.</string>
    <string name="RD_string1">Rizvi College of Arts, Commerce and Science offers undergraduate courses in three streams: Arts, Science and Commerce; post-graduate course in Commerce and Ph.D in two subjects Botany and Commerce.</string>
    <string name="RD_String2"><![CDATA[\n> The Bachelor of Arts requires three years of full time study consisting of six semesters. The college offers six arts subjects: Urdu, Hindi, English, Philosophy, Sociology and Economics. Arts degrees are focused on increasing a students’ knowledge and critical thinking in accordance to the syllabus and curriculum prescribed by the University of Mumbai. These courses aim to prepare students with a sound knowledge and skills to connect across geographical, disciplinary, social and cultural boundaries, understand the importance of ethical behavior and lifelong learning habits. \n\n >Click on the following departmental links to download the program outcome/program specific outcome and course outcome of different arts departments:]]></string>
    <string name="RD_String3"><![CDATA[\n> The Bachelor of Science requires three years of full time study consisting of six semesters. The College offers six science subjects: Chemistry, Physics, Botany, Zoology, Computer Science and Information Technology. These courses introduce a wide range of topics to students, develop reasoning through unfamiliar problems through critical and analytical thinking and to find a systematic approach in analyzing solving problems through teamwork with importance to safe laboratory practice. The college also offers Ph.D in Botany. \n\n> Click on the following departmental links to download the program outcome/program specific outcome and course outcome of different arts departments:]]></string>
    <string name="RD_String4">Click on the following departmental links to download the program outcome/program specific outcome and course outcome of different arts departments:</string>
    <string name="RD_String5"><![CDATA[\n> The Bachelor of Commerce requires three Years of full time study consisting of six semesters. The college offers specialization course in Accountancy and Management. It aims to provide students with the knowledge, tools of analysis and skills to understand and participate in the modern business and economic world. The college also offers M.Com with specialization in Accountancy and Management.The college also offers Ph.D in Commerce. \n\n> Click on the following departmental links to download the program outcome/program specific outcome and course outcome of different arts departments:]]></string>
    <string name="ALEvents_String1"><![CDATA[>Alumni meet for the year 2016-17 was held on Saturday 18th February 2017 in the college auditorium. The invitation for the same was posted personally by the faculty and was spread through What’sApp and Face Book. The initiative received an overwhelming response from the alumni to the extent that the staff kept receiving calls for extending the dates of registration. \n\n> The meeting was attended by over 250 alumni of which 225 were registered alumnus and the rest were the invitees. Principal Dr. S.S Hussain and Vice Principal, Dr. Mrs Anjum Ara gave them a warm welcome and spoke in brief to them about the NAAC accreditation and the significant contribution of the alumnis for the same. \n\n> Many students took this as an opportunity to share their views about their journey as a student and their interaction with faculty and staff. Most of them were excited about meeting their friends and coming back to college. The alumnis were presented with premium pen with college’s name embossed on it. \n\n> The occasion was also graced with the presence of alumnis who are serving as the faculty i different sections of the college including Dr. Alkama Faqih from Botany Deptment, Prof. Huma Sayed of B.M.M Department and Shakiba Merchant of B.M.S department who managed the stage and did the comparing for the programme. \n\n> Mr. Aakash Bhardwaj, well know actor, Director, mucisian and an Event Manager ensured to take time out of his busy schedule to come back to his college and reunite with his friends and teachers. He also urged to involve the alumnis for betterment of students and college. \n\n> Most of the alumnis were positive about the met and suggested to increase them of meets in a year. They also appreciated the efforts of their teachers and mentors in grooming their personality and encouraging their self confidence. \n\n> Mariyah Gour-Ghori \n Convenor, Alumni Committee \n\n> redox admin \n Convenor, Alumni Committee\\]]></string>
    <string name="ALEvents_string2"><![CDATA[> Alumni Meet for the academic year 2015-16 was held on 29th Nov 2015 in the college auditorium from 5.00pm onwards. It had an overwhelming response from the ex-students who kept joining us even by 9.00pm. They had a busy schedule but did not want to miss meeting their teachers and buddies. There were series of performances on stage by our alumni who are now faculty at our own institute including Prof. Zakir, Prof. Shakiba Merchant. A large no. of ex- students from Dept. of Computer Science and I.T. also entertained the gathering with their performances. All the alumni were presented with mementos of the college. \n\n> The senior alumni of 1980\'s and the alumni who have brought laurels to the college through distinguished contribution into their respective field were felicitated. \n\n> Principal, Dr. M. Z. Farooqui welcomed the gathering and explained the significance of their contribution towards branding of college. He also highlighted the role of alumni in NAAC and academic audit. Many alumni showed their eagerness in coming back to college for imparting lectures and sharing their expertise in their field. \n\n> Later, Mr. Rehman Khan, the famous comedian and ex-student of the college entertained the gathering with his jokes. He also enlightened and guided the students to make their career into entertainment industry. \n\n> The programme was a great success with alumni showing their eagerness to contribute towards alumni activities that would further help the college. \n\n> Prof. Mariyah Gour Ghori \nConvenor, Alumni committee]]></string>
    <string name="ALEvents_String3"><![CDATA[> Alumni meet for the year 2014-15 was held on 23rd August 2014 at 5.00p.m. in the college auditorium. It had an overwhelming response with over 120 ex-students who grace the occassion with their presence. \n\n> Some eminent students like Shashank Shah, Rehman Khan and many others along with their batchmates reunited to remember the memories of their college days. Ms. Sonali entertained the audience with her exclusive stage performance. Mr. Rehman Khan made people roll with his unending jokes. \n\n> The Principal Dr. M. Z. Farooqui motivated and invited the alumni to be part of numerous activities of the college. \n\n> Dr. Anjum Ara along with Prof. MariyahGour-Ghori, convenor Alumni Association and many faculties including Dr. Ashfaque Khan, Prof. Shaikh Shahida, Dr. MadhulikaPathak, Prof. Nuzhat Farooqui and Prof. Pratima Sharma interacted with the alumni. \n\n> A page was created on the facebook Gems of Rizvites by the student council\'s General Secretary Ms. Naina Thorat and all were requested to be the part of the same.Yearly and lifetime membership was introduced and alumni were encouraged to be the part of the same. \n\n Prof.MariyahGour-Ghori Convenor, Alumni Association]]></string>
    <string name="AlumniSpeak_String1">Mr. Shashant Shah (Director, movies like Bhagate Raho, Chalo Delhi, Dosvadonia) is an alumnus of Rizvi College of Arts, Science and Commerce. Who completed his graduation in chemistry (B.Sc. chemistry) in 1994. \n\nI am proud of my college, which has retained the prestigious Guru Nanak Dev Trophy sponsored by Mumbai University for the overall supremacy it sports. \n\nWhen it comes to drama and street play WE ARE THE BEST!!!, I would like to request our college authorities to make our college festival “JASHN-E-RIZVI” (2 days) to say a week, which would mean more college participating, more events and a lot fun. \n\n Cheers and Hats off to Rizvi College Management / Trustees / Principal / Staff and students and wish you all the best for future God bless!!!</string>
    <string name="AlumniSpeak_String2">Seemab Amjad Khan, an alumnus of Rizvi College of Arts, Science and Commerce who is the assistant director of movies like Himmatwala (New) and Humshakals says, “I did my graduation in Commerce in the year 2003 and I am very much attached to my college and fondly remember the good old days particularly sports (cricket).”</string>
    <string name="AlumniSpeak_String3">Mr. Rehman Khan, an alumnus of Rizvi College of Arts / Science / Commerce passed out way back in 1996-97, is a famous stand up comedian, who has famous comedy series like Comedy Circus and PapadPol to his credit telecasted in the channel Sub TV. \n\n“I would like to congratulate the principal Dr. M. Z. Farooqui, teachers who are doing great job in developing the college in all direction and if any help is needed on my part I am always available.I feel honored to be Judge for such unique Amjad Khan award for street play in selecting the best actors/directors from colleges participating from all over Mumbai.</string>
</resources>