<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context="Iqac.RelevantDocuments">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Program Outcome/Program Specfic Outcome/ Course Outcome"
                android:textColor="@color/DeepRed"
                android:textSize="22dp"
                android:textAlignment="center"/>

            <TextView
                android:padding="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RD_string1"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/color_title"
                android:textSize="15dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22dp"
                android:text="Arts Stream"
                android:textColor="@color/Blue"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RD_String2"
                android:textColor="@color/color_title"
                android:textSize="18dp"/>

            <Spinner
                android:id="@+id/Arts_Spinner"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22dp"
                android:text="Science Stream"
                android:textColor="@color/Blue"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RD_String3"
                android:textColor="@color/color_title"
                android:textSize="18dp"/>

            <Spinner
                android:id="@+id/Science_Spinner"
                android:layout_width="300dp"
                android:layout_marginTop="10dp"
                android:layout_height="60dp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22dp"
                android:text="Computer Science/IT Stream"
                android:textColor="@color/Blue"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RD_String4"
                android:textColor="@color/color_title"
                android:textSize="18dp"/>

            <Spinner
                android:id="@+id/IT_Spinner"
                android:layout_width="300dp"
                android:layout_marginTop="10dp"
                android:layout_height="60dp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22dp"
                android:text="Commerce Stream"
                android:textColor="@color/Blue"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/RD_String5"
                android:textColor="@color/color_title"
                android:textSize="18dp"/>

            <Spinner
                android:id="@+id/Commerce_Spinner"
                android:layout_width="300dp"
                android:layout_marginTop="10dp"
                android:layout_height="60dp"
                android:layout_gravity="center"/>





        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>