<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context="Lists.AlumniSpeak">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Mr.Shashant Shah"
                android:textAlignment="center"
                android:textColor="@color/DarkGreen"
                android:textSize="22dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="252dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/shashan_shah" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="18dp"
                android:text="@string/AlumniSpeak_String1"
                android:textColor="@color/color_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Mr.Seemab Amjad Khan"
                android:textAlignment="center"
                android:textColor="@color/DarkGreen"
                android:textSize="22dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="252dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/amjad_khan" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/AlumniSpeak_String2"
                android:textSize="18dp"
                android:textColor="@color/color_title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Mr.Rehman Khan"
                android:textAlignment="center"
                android:textColor="@color/DarkGreen"
                android:textSize="22dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="252dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/rehman_khan" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/AlumniSpeak_String3"
                android:textSize="18dp"
                android:textColor="@color/color_title" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>